--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,21 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <log4j.version>2.24.3</log4j.version>
+    <!--
+    permissible log4j2 versions = x.x.x =
+    2.20.0
+    2.19.0
+    2.18.0
+    2.17.2
+    2.17.1
+    2.8.1
+    2.8
+    2.7
+    2.6.2
+    2.6.1
+    2.1
+    -->
+    <log4j.version>2.18.0</log4j.version>
     <log4j.masker.version>2.20.0</log4j.masker.version>
   </properties>
 
@@ -29,6 +43,7 @@
       <artifactId>log4j-core</artifactId>
       <version>${log4j.version}</version>
     </dependency>
+
     <dependency>
       <groupId>io.github.jaihind213</groupId>
       <artifactId>log4j2-masker</artifactId>
@@ -52,35 +67,36 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>3.4.1</version>
-        <dependencies>
-          <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-transform-maven-shade-plugin-extensions</artifactId>
-            <version>0.2.0</version>
-          </dependency>
-        </dependencies>
+        <version>3.5.2</version>
         <executions>
           <execution>
-            <id>shade-jar-with-dependencies</id>
             <phase>package</phase>
             <goals>
               <goal>shade</goal>
             </goals>
             <configuration>
+              <shadedArtifactAttached>true</shadedArtifactAttached>
               <finalName>fat-${project.artifactId}-${project.version}</finalName>
+              <filters>
+              </filters>
               <transformers>
-                <transformer implementation="org.apache.logging.log4j.maven.plugins.shade.transformer.Log4j2PluginCacheFileTransformer"/>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <manifestEntries>
-                    <Multi-Release>true</Multi-Release>
-                  </manifestEntries>
+                <!--we need to add this, else our masking log4j plugin removes all the default plugins in Log4j2Plugins.dat. -->
+                <!--by this doing, all the default ones are kept and our masking plugin is added to list in Log4j2Plugins.dat -->
+                <transformer
+                        implementation="io.github.edwgiz.log4j.maven.plugins.shade.transformer.Log4j2PluginCacheFileTransformer">
                 </transformer>
               </transformers>
             </configuration>
           </execution>
         </executions>
+        <dependencies>
+          <dependency>
+            <groupId>io.github.edwgiz</groupId>
+            <artifactId>log4j-maven-shade-plugin-extensions</artifactId>
+            <version>${log4j.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
 
     </plugins>
